Fix name of state listener, default visibility is hidden for logout button.

--- a/src/main/webapp/homepage.css
+++ b/src/main/webapp/homepage.css
@@ -44,3 +44,7 @@ body, html {
   background-color: #555555;
   color: white;
 }
+
+#signout {
+ visibility: hidden;
+}
